--- a/home/style.css
+++ b/home/style.css
@@ -6,20 +6,18 @@ body {
   margin: 0;
   font-family: "Poppins", sans-serif;
   background-color: #101318;
-  height: 200vh;
 }
 
 .navbar {
   background-color: rgba(0, 0, 0, 0.1);
   -webkit-backdrop-filter: blur(15px);
   backdrop-filter: blur(15px);
-  border-bottom: 1px solid rgba(0, 0, 0, 0.6);
   position: fixed;
   top: 0;
   left: 0;
   right: 0;
   color: azure;
-  padding: 5px 20px;
+  padding: 5px 0;
   transition: transform 0.3s ease;
   font-family: "Poppins", sans-serif;
 
@@ -32,6 +30,7 @@ body {
 .navbar_content {
   display: flex;
   gap: 30px;
+  margin-left: 20px;
   align-items: center;
   white-space: nowrap;
   margin-left: 30px;
@@ -39,9 +38,16 @@ body {
 
 .navbar_copyright {
   display: flex;
+  gap: 10px;
   align-items: center;
   white-space: nowrap;
   margin-right: 30px;
+}
+
+.navbar_copyright img {
+  width: 20px;
+  height: 20px;
+  vertical-align: middle;
 }
 
 .navbar_content a {
@@ -52,7 +58,19 @@ body {
   transition: opacity .2s ease, background .2s ease;
 }
 
+.navbar_copyright a {
+  color: azure;
+  text-decoration: none;
+  padding: 4px 8px;
+  border-radius: 8px;
+  transition: opacity .2s ease, background .2s ease;
+}
+
 .navbar_content a:hover {
+  opacity: 1; background: rgba(255, 255, 255, 0.1);
+}
+
+.navbar_copyright a:hover {
   opacity: 1; background: rgba(255, 255, 255, 0.1);
 }
 
@@ -101,9 +119,16 @@ body {
   font-family: "Poppins", sans-serif;
 }
 
+.projects_desc {
+  text-align: center;
+  margin-bottom: 30px;
+  font-size: 1rem;
+  color: #ccc;
+}
+
 .projects h2 {
   text-align: center;
-  margin-bottom: 40px;
+  margin-bottom: 10px;
   font-size: 2rem;
 }
 
@@ -130,6 +155,14 @@ transition:
   display: block;
 }
 
+.project_card iframe {
+  aspect-ratio: 16 / 9;
+  width: 100%;
+  object-fit: cover;
+  pointer-events: none;
+  display: block;
+}
+
 .project_card video {
   width: 100%;
   display: block;
@@ -149,5 +182,207 @@ transition:
 .project_card:hover {
   transform: translateY(-5px);
   box-shadow: 0 8px 20px rgba(0,0,0,0.3);
-  background-color: rgba(255, 255, 255, 0.1);;
+  background-color: rgba(255, 255, 255, 0.1);
+  cursor: pointer;
+}
+
+.modal {
+  display: none;
+  position: fixed;
+  top: 0; left: 0;
+  width: 100%; height: 100%;
+  background: rgba(0,0,0,0.7);
+  backdrop-filter: blur(8px);
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+.modal_content {
+  background: rgb(16, 19, 24);
+  border-radius: 15px;
+  padding: 20px;
+  max-width: 600px;
+  width: 90%;
+  color: white;
+  text-align: center;
+  position: relative;
+  box-shadow: 0 8px 25px rgba(0,0,0,0.5);
+  animation: fadeInUp 0.3s ease;
+}
+
+@keyframes fadeInUp {
+  from { transform: translateY(40px); opacity: 0; }
+  to   { transform: translateY(0); opacity: 1; }
+}
+
+.modal_close {
+  position: absolute;
+  top: 0px; right: 0px;
+  font-size: 1.8rem;
+  cursor: pointer;
+  color: #ccc;
+  opacity: 1; background: rgb(16, 19, 24);
+  border-radius: 8px;
+  z-index: 1001;
+  width: 40px;
+  height: 40px;
+}
+.modal_close:hover { color: white; }
+
+.modal_content video {
+  width: 100%;
+  border-radius: 10px;
+  margin-bottom: 15px;
+}
+
+.modal_content iframe {
+  width: 100%;
+  border-radius: 10px;
+  margin-bottom: 15px;
+
+  aspect-ratio: 16 / 9;
+  object-fit: cover;
+  pointer-events: none;
+}
+
+.modal_button {
+  display: inline-block;
+  margin-top: 12px;
+  padding: 12px 150px;
+  background: #335fff;
+  color: white;
+  font-weight: 600;
+  border-radius: 8px;
+  text-decoration: none;
+  transition: background 0.3s;
+}
+.modal_button:hover {
+  background: #5479ff;
+}
+
+.modal_play_image {
+  vertical-align: middle;
+  width: 28px;
+  height: 28px;
+}
+
+.modal_test_text {
+  font-size: 12px;
+  color: #ccc;
+}
+
+.cta {
+  text-align: center;
+  padding: 20px 20px;
+  background-color: rgba(0, 0, 0, 0.1);
+  -webkit-backdrop-filter: blur(15px);
+  backdrop-filter: blur(15px);
+  color: white;
+}
+
+.cta h2 {
+  font-size: 2rem;
+  margin-bottom: 10px;
+}
+
+.cta p {
+  font-size: 1.1rem;
+  color: #ccc;
+  margin-bottom: 25px;
+}
+
+.cta_button {
+  padding: 10px 40px;
+  background: rgba(255, 255, 255, 0.05);
+  border-radius: 10px;
+  font-weight: 600;
+  color: white;
+  text-decoration: none;
+  transition: transform 0.3s ease, background 0.3s ease;
+}
+.cta_button:hover {
+  background: rgba(255, 255, 255, 0.1);
+  transform: translateY(-5px);
+}
+
+.whyme {
+  padding: 10px 20px;
+  max-width: 1100px;
+  margin: auto;
+  text-align: center;
+  color: white;
+}
+.whyme h2 {
+  font-size: 2rem;
+  margin-bottom: 40px;
+}
+.whyme_grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 30px;
+}
+.whyme_grid div {
+  background: rgba(255, 255, 255, 0.05);
+  border-radius: 12px;
+  padding: 20px;
+  backdrop-filter: blur(6px);
+  transition: transform 0.3s ease, background 0.3s ease;
+}
+.whyme_grid div:hover {
+  transform: translateY(-5px);
+  background: rgba(255, 255, 255, 0.1);
+}
+
+.hamburger {
+  margin-left: 20px;
+  display: none;
+  flex-direction: column;
+  justify-content: center;
+  gap: 5px;
+  cursor: pointer;
+  width: 30px;
+  height: 25px;
+}
+
+.hamburger span {
+  display: block;
+  height: 3px;
+  width: 100%;
+  background: white;
+  transition: all 0.3s ease;
+}
+
+@media (max-width: 768px) {
+  .navbar {
+   background-color: #0E1116;
+  }
+
+  .navbar_content {
+    margin-left: 0px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+    z-index: 998;
+
+    position: absolute;
+    top: 66px;
+    left: 0;
+    right: 0;
+
+    background-color: #0E1116;
+    
+    overflow: hidden;
+    max-height: 0;
+    transition: max-height 0.4s ease;
+  }
+
+  .navbar_content.active {
+    max-height: 300px;
+  }
+
+  .hamburger {
+    display: flex;
+  }
 }
