--- a/404/style.css
+++ b/404/style.css
@@ -54,18 +54,11 @@ a {
 .image-placeholder img {
   width: 200px;
   height: 200px;
+  margin-top: 50px;
+  margin-bottom: 50px;
   display: flex;
   align-items: center;
   justify-content: center;
-}
-.background {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
-  overflow: hidden;
-  z-index: -1; /* jeśli ma być w tle */
 }
 
 .question {
