--- a/404/style.css
+++ b/404/style.css
@@ -32,6 +32,8 @@ a {
 .go_back:hover {
   opacity: 1; 
   background: rgba(255, 255, 255, 0.1);
+  -webkit-backdrop-filter: blur(2px);
+  backdrop-filter: blur(2px);
 }
 
 .container {
