--- a/main/style.css
+++ b/main/style.css
@@ -7,3 +7,11 @@ body {
   font-family: "Poppins", sans-serif;
   background-color: #101318;
 }
+
+#canvas {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  pointer-events: none;
+}
